# scrabble_solver

./: .gitignore  CMakeLists.txt  Makefile  README  build.sh  dictionary.txt  doc.txt  driver.vim  game.sh  sim.sh  ss.cpp  ss.h  ss_board.h  ss_dict.cpp  ss_dict.h  ss_driver.h  ss_forward.h  ss_generic_factory.h  ss_rack.h  ss_renderer.cpp  ss_renderer.h  ss_solver.h  ss_strategy.cpp  ss_util.cpp  ss_util.h  test.cpp  test.sh
app/: cmd_complete.cpp  cmd_heat_map.cpp  cmd_init.cpp  cmd_move.cpp  cmd_rotate.cpp  driver.cpp  game_context.cpp  game_context.h  game_context_io.cpp  game_context_io.h  solver.cpp  ss.cpp  text_composer.h  vplayer.h  vplayer_ai.cpp  vplayer_text.cpp
app/driver/: cmd_complete.cpp  cmd_heat_map.cpp  cmd_init.cpp  cmd_move.cpp  cmd_rotate.cpp  driver.cpp  game_context.cpp  game_context.h  sub_command.h  (+2 more)
data/: game0.json
include/: picture_compiler.h  ss.h  ss_algorithm.h  ss_board.h  ss_board_util.h  ss_dict.h  ss_dict_helpers.h  ss_generic_factory.h  ss_io.h  ss_metric.h  ss_move_db.h  ss_orientation.h  ss_print.h  ss_rack.h  ss_strategy.h  ss_tile.h  ss_tile_traits.h  ss_util.h  ss_word_placement.h
lib/: ss.cpp  ss_algorithm.cpp  ss_board.cpp  ss_board_util.cpp  ss_dict.cpp  ss_metric.cpp  ss_rack.cpp  ss_strategy_brute_force.cpp  ss_strategy_fast_solver.cpp  ss_strategy_first.cpp  ss_tile_traits.cpp  ss_util.cpp  ss_word_placement.cpp
test/: picture_compiler.cpp  ss_io.cpp  ss_strategy_fast_solver.cpp  test_board.cpp  test_board_from_string.cpp  test_dict.cpp  test_metric.cpp  test_strategy_fast_solver.cpp  test_words_from_board.cpp
